force-app/main/default/objects/Contract/fields/ARC_signed_by__c.field-meta.xml
<CustomField>
    <fullName>ARC_signed_by__c</fullName>
    <label>ARC signed by</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nate Smith</fullName>
            </value>
            <value>
                <fullName>Bill Sarnese</fullName>
            </value>
            <value>
                <fullName>Al Struzinski</fullName>
            </value>
            <value>
                <fullName>Liz Cline</fullName>
            </value>
            <value>
                <fullName>Gina Cline</fullName>
            </value>
            <value>
                <fullName>Laura Wilner</fullName>
            </value>
            <value>
                <fullName>Barb Smith</fullName>
            </value>
            <value>
                <fullName>Nate Getchell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>