force-app/main/default/objects/Contract/fields/ARC_Terms__c.field-meta.xml
<CustomField>
    <fullName>ARC_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARC Terms</label>
    <type>Checkbox</type>
</CustomField>