force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>District Forms</fullName>
            </value>
            <value>
                <fullName>DSA/DPA</fullName>
            </value>
            <value>
                <fullName>eLibrary</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>Publisher Permission</fullName>
            </value>
            <value>
                <fullName>RFP Contract</fullName>
            </value>
            <value>
                <fullName>RFP Renewal</fullName>
            </value>
            <value>
                <fullName>Vendor Registrations</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>