force-app/main/default/objects/Contract/fields/ICRM_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Account_ID__c</fullName>
    <label>ICRM Account ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>