force-app/main/default/objects/Contract/fields/Recieved_Customer_Countersign__c.field-meta.xml
<CustomField>
    <fullName>Recieved_Customer_Countersign__c</fullName>
    <label>Recieved Customer Countersign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Countersign not needed</fullName>
            </value>
            <value>
                <fullName>Countersign needed</fullName>
            </value>
            <value>
                <fullName>Countersign received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>